
= rufus-json CHANGELOG.txt


== rufus-json - 1.0.5    not yet released


== rufus-json - 1.0.4    released 2013/03/06

- add support for OJ (https://github.com/ohler55/oj)


== rufus-json - 1.0.3    released 2013/02/12

- JSON.parse(s, :create_additions => false)
  see https://groups.google.com/forum/?fromgroups=#!topic/rubyonrails-security/4_YvCpLzL58


== rufus-json - 1.0.2    released 2012/05/24


== rufus-json - 1.0.1    released 2011/06/01

- require 'rufus-json/automatic' ('one require' rufus-json)
- Rufus::Json.load_backend(*order)


== rufus-json - 1.0.0    released 2011/05/25

- reaching 1.0.0 finally


== rufus-json - 0.2.7    released 2011/05/20
== rufus-json - 0.2.6    released 2011/05/20

- Rufus::Json .dump and .load (aliases to .encode/.decode). Thanks @tenderlove


== rufus-json - 0.2.5    released 2010/08/10

- Rufus::Json.encode(o) now accepting string, numbers, boolean and null
  for any JSON backend (especially json and json-pure)


== rufus-json - 0.2.4    released 2010/07/17

- Rufus::Json.pretty_encode(o) (except for active_support)
- Rufus::Json.encode(o, opts={}) options are accessible


== rufus-json - 0.2.3    released 2010/06/29

- made sure we're able to parse any JSON string
  ('json' couldn't parse "true", '"string"' or "12345" on their own)


== rufus-json - 0.2.2    released 2010/05/26

- Unified Rufus::Json::ParserError (Torsten Schoenebaum)


== rufus-json - 0.2.1    released 2010/05/03

- ActiveSupport::JSON.encode(o) instead of o.to_json


== rufus-json - 0.2.0    released 2010/02/08

- JSON :max_nesting set to nil (no limits)


== rufus-json - 0.1.0    released 2009/12/25
